--- a/grape.html
+++ b/grape.html
@@ -4,8 +4,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <!-- Go Imports -->
-  <meta name="go-import" content="ilie.io/go/spongebob git https://github.com/calini/spongebob">
-  <meta http-equiv="refresh" content="0; https://github.com/calini/spongebob">
+  <meta name="go-import" content="go.ilie.io/grape git https://github.com/calini/grape">
+  <meta http-equiv="refresh" content="0; https://github.com/calini/grape">
 </head>
 <body>
 </body>
