--- a/memes.html
+++ b/memes.html
@@ -4,8 +4,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <!-- Go Imports -->
-  <meta name="go-import" content="ilie.io/go/grape git https://github.com/calini/grape">
-  <meta http-equiv="refresh" content="0; https://github.com/calini/grape">
+  <meta name="go-import" content="go.ilie.io/memes git https://github.com/calini/memes">
+  <meta http-equiv="refresh" content="0; https://github.com/calini/memes">
 </head>
 <body>
 </body>
